--- a/css/styles.css
+++ b/css/styles.css
@@ -1,275 +1,494 @@
 @charset "utf-8";
 /* CSS Document */
 
-body,td,th,p{
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10pt;
-	color: #333;
-	line-height: 1.5;
+body, td, th, p {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 10pt;
+  color: #333;
+  line-height: 1.5;
 }
+
 body {
-	background-color: #fdfdfd;
-	margin: 0;
-	position:relative;
+  background-color: #fdfdfd;
+  margin: 0;
+  position: relative;
 }
+
 ul, li {
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10pt;
-	color: #333;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #333;
 }
+
 a {
-	color: orange;
-	text-decoration: none;
+  color: orange;
+  text-decoration: none;
 }
+
 a:hover, a:focus {
-	color: #3397db;
-	text-decoration: none;
+  color: #3397db;
+  text-decoration: none;
 }
-a img{
-	border: none 0px #fff;
+
+a img {
+  border: none 0px #fff;
 }
+
 h1, h2, h3, h4, h5, h6 {
   font-family: Arial, Helvetica, sans-serif;
-  margin: 0 0 20px;
 }
+
 article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
-	display: block;
+  display: block;
 }
+
 #maincontent {
   background-color: #f3f3f3;
   min-height: 100%;
 }
+
 #footer {
   background-color: #444;
   color: #aaa;
-  font-size: 8pt;
+  font-size: 18pt;
   letter-spacing: 1px;
-  padding: 25px;
   text-align: center;
   text-transform: uppercase;
 }
+
 /* ====================== Navigation ====================== */
+
 nav {
   width: 100%;
-  height: 80px;
   background-color: #252831;
-  text-align:center;
+  text-align: center;
 }
+
 nav h1 {
-  margin: auto;
+	margin: auto;
 }
+
 nav h1 a {
   color: #fff;
-  font-size: 14pt;
+	font-size: 32pt;
   font-weight: 200;
   letter-spacing: 10px;
   text-transform: uppercase;
 }
+
 #breadcrumb {
-    padding: 10px 40px 16px;
-    list-style: none;
-    background-color: #eee;
-    font-size: 17px;
-    margin: 0;
-    width: calc(50% - 80px);
+  font-size: 18pt;
+  background-color: #fff;
+  list-style: none;
+  margin: 0;
 }
 
 /* Display list items side by side */
+
 #breadcrumb li {
-    display: inline;
+  display: inline;
 }
 
 /* Add a slash symbol (/) before/behind each list item */
+
 #breadcrumb li+li:before {
-    padding: 8px;
-    color: black;
-    content: "/\00a0";
+  color: black;
+  content: "/\00a0";
 }
 
 /* Add a color to all links inside the list */
+
 #breadcrumb li a {
-    color: #0275d8;
-    text-decoration: none;
+  color: #0275d8;
+  text-decoration: none;
 }
 
 /* Add a color on mouse-over */
+
 #breadcrumb li a:hover {
-    color: #01447e;
-    text-decoration: underline;
+  color: #01447e;
+  text-decoration: underline;
 }
+
 /* ====================== Map ====================== */
+
 #map {
-  height: 400px;
+	height: 600px;
   width: 100%;
   background-color: #ccc;
 }
+
 /* ====================== Restaurant Filtering ====================== */
+
 .filter-options {
   width: 100%;
-  height: 50px;
   background-color: #3397DB;
   align-items: center;
+	vertical-align: middle;
+	padding: 8px 5px 8px 5px;
 }
+
 .filter-options h2 {
+	display: inline;
+	padding: 0 8px 0 8px;
   color: white;
-  font-size: 1rem;
+  font-size: 24pt;
   font-weight: normal;
-  line-height: 1;
-  margin: 0 20px;
+	vertical-align: middle;
 }
+
 .filter-options select {
+	display: inline;
   background-color: white;
   border: 1px solid #fff;
-  font-family: Arial,sans-serif;
-  font-size: 11pt;
-  height: 35px;
-  letter-spacing: 0;
-  margin: 10px;
-  padding: 0 10px;
-  width: 200px;
+  font-family: Arial, sans-serif;
+  font-size: 18pt;
+  vertical-align: middle;
+	height: 48px;
 }
 
 /* ====================== Restaurant Listing ====================== */
+
 #restaurants-list {
   background-color: #f3f3f3;
   list-style: outside none none;
-  margin: 0;
-  padding: 30px 15px 60px;
   text-align: center;
+	padding: 0 32px 0 32px;
 }
+
 #restaurants-list li {
   background-color: #fff;
   border: 2px solid #ccc;
-  font-family: Arial,sans-serif;
-  margin: 15px;
-  min-height: 380px;
-  padding: 0 30px 25px;
+  font-family: Arial, sans-serif;
   text-align: left;
-  width: 270px;
+	padding: 12px 8px 12px 8px;
+	margin: 12px 0 12px 0;
 }
+
 #restaurants-list .restaurant-img {
   background-color: #ccc;
   display: block;
   margin: 0;
   max-width: 100%;
-  min-height: 248px;
   min-width: 100%;
 }
+
 #restaurants-list li h1 {
   color: #f18200;
-  font-family: Arial,sans-serif;
-  font-size: 14pt;
+  font-family: Arial, sans-serif;
+  font-size: 10pt;
   font-weight: 200;
   letter-spacing: 0;
   line-height: 1.3;
-  margin: 20px 0 10px;
   text-transform: uppercase;
 }
+
 #restaurants-list p {
   margin: 0;
-  font-size: 11pt;
+  font-size: 8pt;
 }
+
 #restaurants-list li a {
   background-color: orange;
   border-bottom: 3px solid #eee;
   color: #fff;
+	padding: 12px 8px 12px 8px;
+	margin-top: 10px;
   display: inline-block;
-  font-size: 10pt;
-  margin: 15px 0 0;
-  padding: 8px 30px 10px;
+  font-size: 20pt;
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
+	width: 98%;
 }
 
 /* ====================== Restaurant Details ====================== */
+
 .inside header {
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 1000;
+  z-index: 10000;
 }
+
 .inside #map-container {
   background: blue none repeat scroll 0 0;
-  height: 87%;
-  position: fixed;
-  right: 0;
-  top: 80px;
+  height: 650px;
+  position: relative;
+	float: right;
+	margin-top: 104px;
   width: 50%;
 }
+
 .inside #map {
   background-color: #ccc;
   height: 100%;
   width: 100%;
 }
+
 .inside #footer {
   bottom: 0;
   position: absolute;
-  width: 50%;
+  width: 100%;
 }
+
 #restaurant-name {
   color: #f18200;
-  font-family: Arial,sans-serif;
+  font-family: Arial, sans-serif;
   font-size: 20pt;
   font-weight: 200;
   letter-spacing: 0;
-  margin: 15px 0 30px;
   text-transform: uppercase;
   line-height: 1.1;
 }
+
 #restaurant-img {
-	width: 90%;
+  width: 90%;
 }
+
 #restaurant-address {
-  font-size: 12pt;
-  margin: 10px 0px;
+  font-size: 18pt;
 }
+
 #restaurant-cuisine {
   background-color: #333;
   color: #ddd;
-  font-size: 12pt;
+  font-size: 18pt;
   font-weight: 300;
-  letter-spacing: 10px;
-  margin: 0 0 20px;
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
-	width: 90%;
+  width: 90%;
 }
+
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
-  width: 50%;
 }
+
+#restaurant-container {
+	top: 104px;
+	width: 50%;
+}
+
 #reviews-container {
-  padding: 30px 40px 80px;
+	width: 100%
 }
+
 #reviews-container h2 {
   color: #f58500;
   font-size: 24pt;
   font-weight: 300;
   letter-spacing: -1px;
-  padding-bottom: 1pt;
 }
+
 #reviews-list {
   margin: 0;
   padding: 0;
 }
+
 #reviews-list li {
   background-color: #fff;
-    border: 2px solid #f3f3f3;
+  border: 2px solid #f3f3f3;
   display: block;
+	padding: 0 16px 0 16px;
+	margin: 12px 0 12px 0;
   list-style-type: none;
-  margin: 0 0 30px;
   overflow: hidden;
-  padding: 0 20px 20px;
   position: relative;
-  width: 85%;
 }
+
 #reviews-list li p {
-  margin: 0 0 10px;
 }
+
 #restaurant-hours td {
   color: #666;
+	font-size: 14pt;
+}
+
+.leaflet-touch .leaflet-bar a {
+	height: 48px !important;
+	width: 48px !important;
+	line-height: 48px !important;
+	font-size: 24pt;
+}
+
+/* Tablets 768px */
+
+@media (min-width: 768px) {
+	body, td, th, p {
+		font-size: 12pt;
+	}
+
+	#map {
+		height: 380px;
+	}
+
+	nav h1 a {
+		font-size: 24pt;
+	}
+	.filter-options {
+		width: auto;
+	}
+	.filter-options h2 {
+		font-size: 16pt;
+	}
+
+	.filter-options select {
+		font-size: 16pt;
+		height: 32px;
+	}
+
+	#restaurants-list {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-evenly;
+	}
+
+	#restaurants-list li {
+		flex: 0 1 45%;
+	}
+
+	#restaurants-list li h1 {
+		font-size: 16pt;
+	}
+
+	#restaurants-list p {
+		font-size: 12pt;
+	}
+
+	#restaurants-list li a {
+		display: block;
+		font-size: 16pt;
+		padding: 8px;
+		width: auto;
+		text-align: center;
+	}
+
+	#breadcrumb {
+		font-size: 16pt;
+	}
+
+	#footer {
+		font-size: 12pt;
+	}
+}
+
+/* Medium devices (desktops, 1024px and up) */
+
+@media (min-width: 1024px) {
+	body, td, th, p {
+		font-size: 10pt;
+	}
+	h1, h2, h3, h4, h5, h6 {
+		margin: 0 0 20px;
+	}
+	#footer {
+		padding: 25px;
+	}
+	/* ====================== Navigation ====================== */
+	nav {
+	}
+	#breadcrumb {
+		padding: 16px;
+		font-size: 17px;
+	}
+	/* Add a slash symbol (/) before/behind each list item */
+	#breadcrumb li+li:before {
+		padding: 8px;
+		content: "/\00a0";
+	}
+	/* ====================== Map ====================== */
+	#map {
+		height: 400px;
+	}
+	/* ====================== Restaurant Filtering ====================== */
+	.filter-options {
+		padding: 0;
+	}
+	.filter-options h2 {
+		font-size: 14pt;
+		margin: 0 20px;
+	}
+	.filter-options select {
+		font-size: 14pt;
+		margin: 10px;
+		padding: 0 10px;
+	}
+	/* ====================== Restaurant Listing ====================== */
+	#restaurants-list {
+		padding: 30px 15px 60px;
+	}
+	#restaurants-list li {
+		margin: 15px;
+		min-height: 380px;
+		padding: 0 30px 25px;
+		flex: 0 1 40%;
+	}
+	#restaurants-list .restaurant-img {
+		min-height: 248px;
+	}
+	#restaurants-list li h1 {
+		margin: 20px 0 10px;
+	}
+	#restaurants-list li a {
+		margin: 15px 0 0;
+		padding: 8px 30px 10px;
+	}
+	/* ====================== Restaurant Details ====================== */
+	.inside header {}
+	.inside #map-container {
+		margin: 0;
+		position: fixed;
+		top: 101px;
+		height: 100%;
+		right: 0;
+		width: 48%;
+	}
+	.inside #map {}
+	.inside #footer {
+		font-size: 12pt;
+		word-spacing: 16px;
+		letter-spacing: 8px;
+	}
+	#restaurant-name {
+		margin: 15px 0 30px;
+	}
+	#restaurant-img {}
+	#restaurant-address {
+		margin: 10px 0px;
+	}
+	#restaurant-cuisine {
+		letter-spacing: 10px;
+		margin: 0 0 20px;
+		padding: 2px 0;
+	}
+	#restaurant-container {
+		margin-top: 101px;
+		padding: 16px;
+	}
+	#reviews-container {
+		width: 50%;
+		padding: 16px 16px 64px 16px;
+	}
+	#reviews-container h2 {
+		padding-bottom: 1pt;
+	}
+	#reviews-list {
+		margin: 0;
+	}
+	#reviews-list li {
+		margin: 12px 0 12px;
+		padding: 20px;
+	}
+	#reviews-list li p {
+		margin: 0 0 10px;
+	}
+	#restaurant-hours td {}
+
+	.leaflet-touch .leaflet-bar a {
+		height: 30px !important;
+		width: 30px !important;
+		line-height: 30px !important;
+		font-size: 16pt;
+	}
 }
