--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
 
 body, td, th, p {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 10pt;
+  font-size: 14pt;
   color: #333;
   line-height: 1.5;
 }
@@ -44,6 +44,9 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 #maincontent {
   background-color: #f3f3f3;
   min-height: 100%;
+  /* display: flex; */
+  flex-wrap: wrap;
+  justify-content: space-evenly;
 }
 
 #footer {
@@ -64,19 +67,20 @@ nav {
 }
 
 nav h1 {
+  font-size: 12pt;
 	margin: auto;
 }
 
 nav h1 a {
   color: #fff;
-	font-size: 32pt;
+  padding: 4px;
+	font-size: 12pt;
   font-weight: 200;
-  letter-spacing: 10px;
   text-transform: uppercase;
 }
 
 #breadcrumb {
-  font-size: 18pt;
+  font-size: 10pt;
   background-color: #fff;
   list-style: none;
   margin: 0;
@@ -112,7 +116,7 @@ nav h1 a {
 /* ====================== Map ====================== */
 
 #map {
-	height: 600px;
+	height: 300px;
   width: 100%;
   background-color: #ccc;
 }
@@ -129,9 +133,8 @@ nav h1 a {
 
 .filter-options h2 {
 	display: inline;
-	padding: 0 8px 0 8px;
   color: white;
-  font-size: 24pt;
+  font-size: 10pt;
   font-weight: normal;
 	vertical-align: middle;
 }
@@ -141,9 +144,8 @@ nav h1 a {
   background-color: white;
   border: 1px solid #fff;
   font-family: Arial, sans-serif;
-  font-size: 18pt;
+  font-size: 10pt;
   vertical-align: middle;
-	height: 48px;
 }
 
 /* ====================== Restaurant Listing ====================== */
@@ -169,7 +171,6 @@ nav h1 a {
   display: block;
   margin: 0;
   max-width: 100%;
-  min-width: 100%;
 }
 
 #restaurants-list li h1 {
@@ -191,10 +192,10 @@ nav h1 a {
   background-color: orange;
   border-bottom: 3px solid #eee;
   color: #fff;
-	padding: 12px 8px 12px 8px;
+	padding: 3px;
 	margin-top: 10px;
   display: inline-block;
-  font-size: 20pt;
+  font-size: 12pt;
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
@@ -212,11 +213,10 @@ nav h1 a {
 
 .inside #map-container {
   background: blue none repeat scroll 0 0;
-  height: 650px;
+  height: 275px;
   position: relative;
-	float: right;
-	margin-top: 104px;
-  width: 50%;
+	margin-top: 50px;
+  width: 100%;
 }
 
 .inside #map {
@@ -227,6 +227,7 @@ nav h1 a {
 
 .inside #footer {
   bottom: 0;
+  font-size: 8pt;
   position: absolute;
   width: 100%;
 }
@@ -234,30 +235,32 @@ nav h1 a {
 #restaurant-name {
   color: #f18200;
   font-family: Arial, sans-serif;
-  font-size: 20pt;
+  font-size: 16pt;
   font-weight: 200;
   letter-spacing: 0;
   text-transform: uppercase;
   line-height: 1.1;
+  text-align: center;
 }
 
 #restaurant-img {
-  width: 90%;
+  width: 100%;
 }
 
 #restaurant-address {
-  font-size: 18pt;
+  font-size: 14pt;
+  text-align: center;
 }
 
 #restaurant-cuisine {
   background-color: #333;
   color: #ddd;
-  font-size: 18pt;
+  font-size: 16pt;
   font-weight: 300;
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
-  width: 90%;
+  width: 100%;
 }
 
 #restaurant-container, #reviews-container {
@@ -266,8 +269,12 @@ nav h1 a {
 }
 
 #restaurant-container {
-	top: 104px;
-	width: 50%;
+	width: 100%;
+}
+
+#restaurant-hours {
+  width: 90%;
+  margin: auto;
 }
 
 #reviews-container {
@@ -276,9 +283,10 @@ nav h1 a {
 
 #reviews-container h2 {
   color: #f58500;
-  font-size: 24pt;
+  font-size: 18pt;
   font-weight: 300;
-  letter-spacing: -1px;
+  letter-spacing: normal;
+  text-align: center;
 }
 
 #reviews-list {
@@ -303,13 +311,15 @@ nav h1 a {
 #restaurant-hours td {
   color: #666;
 	font-size: 14pt;
+  width: 50%;
+  vertical-align: middle;
 }
 
 .leaflet-touch .leaflet-bar a {
-	height: 48px !important;
-	width: 48px !important;
-	line-height: 48px !important;
-	font-size: 24pt;
+	height: 40px !important;
+	width: 40px !important;
+	line-height: 40px !important;
+	font-size: 18pt;
 }
 
 /* Tablets 768px */
@@ -388,6 +398,11 @@ nav h1 a {
 	/* ====================== Navigation ====================== */
 	nav {
 	}
+
+  nav h1 a {
+    font-size: 32pt;
+  }
+
 	#breadcrumb {
 		padding: 16px;
 		font-size: 17px;
@@ -419,10 +434,10 @@ nav h1 a {
 		padding: 30px 15px 60px;
 	}
 	#restaurants-list li {
-		margin: 15px;
+		margin: 0 0 10px;
 		min-height: 380px;
 		padding: 0 30px 25px;
-		flex: 0 1 40%;
+		flex: 0 1 28%;
 	}
 	#restaurants-list .restaurant-img {
 		min-height: 248px;
@@ -439,17 +454,20 @@ nav h1 a {
 	.inside #map-container {
 		margin: 0;
 		position: fixed;
-		top: 101px;
+		top: 125px;
 		height: 100%;
 		right: 0;
 		width: 48%;
 	}
 	.inside #map {}
 	.inside #footer {
-		font-size: 12pt;
-		word-spacing: 16px;
-		letter-spacing: 8px;
+    font-size: 12pt;
+    word-spacing: 14px;
+    letter-spacing: 7px;
 	}
+  .inside #maincontent {
+    display: block;
+  }
 	#restaurant-name {
 		margin: 15px 0 30px;
 	}
@@ -463,8 +481,10 @@ nav h1 a {
 		padding: 2px 0;
 	}
 	#restaurant-container {
-		margin-top: 101px;
-		padding: 16px;
+    margin-top: 101px;
+    position: relative;
+    padding: 16px;
+    width: 50%;
 	}
 	#reviews-container {
 		width: 50%;
